# MobileAI-Studio

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  mobileai-key.jks  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni.h
app/src/main/java/com/mobileaistudio/: MobileAIApplication.kt
app/src/main/java/com/mobileaistudio/data/local/: UserPreferences.kt
app/src/main/java/com/mobileaistudio/data/repository/: ChatRepositoryImpl.kt  HardwareRepositoryImpl.kt  ModelRepositoryImpl.kt
app/src/main/java/com/mobileaistudio/di/: DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/mobileaistudio/domain/model/: ChatConversation.kt  ChatMessage.kt  DeviceCapabilities.kt  InferenceConfig.kt  Model.kt  Preset.kt
app/src/main/java/com/mobileaistudio/domain/repository/: IChatRepository.kt  IHardwareRepository.kt  IModelRepository.kt
app/src/main/java/com/mobileaistudio/inference/: LlamaCppEngine.kt
app/src/main/java/com/mobileaistudio/service/: DownloadService.kt
app/src/main/java/com/mobileaistudio/ui/: MainActivity.kt
app/src/main/java/com/mobileaistudio/ui/navigation/: AppNavigation.kt  Screen.kt
app/src/main/java/com/mobileaistudio/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+31 files in other folders)
